--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>🎲 Luck Quest: Destiny's Game 🌟</h1>
-        
+
         <div class="game-stats">
             <div>
                 <p>Points: <span id="points">5000</span></p>
@@ -22,10 +22,14 @@
         </div>
 
         <div class="game-area">
-            <div id="diceContainer" class="dice-container"></div>
+            <div id="diceContainer" class="dice-container">
+                <!-- Dice will be dynamically generated here -->
+            </div>
 
             <div class="game-controls">
-                <button id="playButton">Embark on Quest</button>
+                <button id="rollButton">Roll Dice</button>
+                <button id="luckCardButton" style="display:none;">Draw Luck Card</button>
+                <button id="rerollButton" style="display:none;">Reroll Dice</button>
                 <button id="resetButton" style="display:none;">New Adventure</button>
             </div>
 
