--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luck Quest: The Ultimate Challenge</title>
+    <title>7 Dice Roll Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>🎲 Luck Quest: Destiny's Game 🌟</h1>
+        <h1>🎲 7 Dice Roll Game 🎲</h1>
 
         <div class="game-stats">
             <div>
@@ -16,8 +16,7 @@
                 <p>Best Round: <span id="bestRound">0</span></p>
             </div>
             <div>
-                <p>Luck Score: <span id="luckScore">0</span></p>
-                <p>Game Cost: 500</p>
+                <p>Entrance Fee: 20 points</p>
             </div>
         </div>
 
@@ -28,8 +27,6 @@
 
             <div class="game-controls">
                 <button id="rollButton">Roll Dice</button>
-                <button id="luckCardButton" style="display:none;">Draw Luck Card</button>
-                <button id="rerollButton" style="display:none;">Reroll Dice</button>
                 <button id="resetButton" style="display:none;">New Adventure</button>
             </div>
 
