--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
         </div>
 
         <div class="game-area">
+            <!-- Dice Container: Dice will be dynamically generated and displayed here -->
             <div id="diceContainer" class="dice-container">
-                <!-- Dice will be dynamically generated here -->
+                <!-- Dice elements will be inserted by JavaScript -->
             </div>
 
             <div class="game-controls">
+                <!-- Button to roll the dice -->
                 <button id="rollButton">Roll Dice</button>
+                <!-- Button to reset the game (hidden initially) -->
                 <button id="resetButton" style="display:none;">New Adventure</button>
             </div>
 
@@ -54,6 +57,7 @@
         </div>
     </div>
 
+    <!-- Include the JavaScript file that handles the dice roll and other game functionality -->
     <script src="script.js"></script>
 </body>
 </html>
