--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
             <div class="game-controls">
                 <!-- Button to roll the dice -->
                 <button id="rollButton">Roll Dice</button>
+
+                <!-- Button to draw a card -->
+                <button id="drawCardButton">Draw Card</button>
+
+                <!-- Button to flip a coin -->
+                <button id="flipCoinButton">Flip Coin</button>
+
                 <!-- Button to reset the game (hidden initially) -->
                 <button id="resetButton" style="display:none;">New Adventure</button>
             </div>
